CADF audit support for Placement API.
Closes-Issue: PRODX-31565
Change-Id: I6aebf4a01401f7de92679b6704ab32d4f5d064aa

--- a/openstack_controller/templates/services/messaging.yaml
+++ b/openstack_controller/templates/services/messaging.yaml
@@ -72,6 +72,10 @@ spec:
           {%- do enabled_vhosts.append('nova') %}
           {{ messaging_service_creds(credentials["compute"], "nova", ["/nova"]) }}
           {%- endif %}
+          {%- if 'placement' in services %}
+          {%- do enabled_vhosts.append('placement') %}
+          {{ messaging_service_creds(credentials["placement"], "placement", [ "/placement" ]) }}
+          {%- endif %}
           {%- if 'load-balancer' in services %}
           {%- do enabled_vhosts.append('octavia') %}
           {{ messaging_service_creds(credentials["load-balancer"], "octavia", ["/octavia"]) }}
