--- a/openstack_controller/templates/services/placement.yaml
+++ b/openstack_controller/templates/services/placement.yaml
@@ -2,6 +2,18 @@
 #kind: HelmBundle
 
 {%- set service = 'placement' %}
+{%- set logging = spec.get('features', {}).get('logging', {}) %}
+{%- set cadf_audit = logging.get('cadf', {}) %}
+{%- set cadf_audit_driver = logging.get('cadf', {}).get('driver', 'messagingv2') %}
+{%- set stacklight_enabled = spec.get('features', {}).get('stacklight', {}).get('enabled', False) %}
+{%- set notification_topics = ['notifications'] %}
+{%- do notification_topics.append('stacklight_notifications') if stacklight_enabled %}
+{%- set external_notifications_enabled = spec.get('features', {}).get('messaging', {}).get('notifications', {}).get('external', {}).get('enabled', False) %}
+{%- if external_notifications_enabled %}
+  {%- for topic in spec.get('features', {}).get('messaging', {}).get('notifications', {}).get('external', {}).get('topics', []) %}
+    {%- do notification_topics.append(topic) %}
+  {%- endfor %}
+{%- endif  %}
 spec:
   releases:
 {%- if spec.get('migration', {}).get('placement', {}).get('deploy_main_service', True) %}
@@ -44,6 +56,16 @@ spec:
             {%- if spec.openstack_version not in ("queens", "rocky", "stein") %}
             service_type: placement
             {%- endif %}
+          audit_middleware_notifications:
+          {%- if cadf_audit.enabled %}
+            driver: {{ cadf_audit_driver }}
+          audit:
+            enabled: true
+          {%- else %}
+            driver: noop
+          {%- endif %}
+          oslo_messaging_notifications:
+            topics: {{ notification_topics|join(',') }}
         logging:
           logger_placement:
             level: {{ spec.get('features', {}).get('logging', {}).get('placement', {}).get('level', 'INFO') }}
@@ -54,6 +76,7 @@ spec:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
 {% include 'base/_admin_identity.yaml' %}
 {% include 'base/_cache.yaml' %}
+{% include 'base/_notifications.yaml' %}
         oslo_db:
           auth:
             admin:
