Pass cinder keyring to nova and libvirt
The patch passes cinder keyring to nova compute because in case of
volumes are crypted cinder keyring is required for nova.

Related-PRODX: PRODX-28265
Related-PRODX: PRODX-30865
Related-PRODX: PRODX-31516
Change-Id: I7d0a941cedeee5742c6ad9ba33ad8127c0ea08de

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -180,9 +180,15 @@ spec:
         ceph:
 {%- if is_ceph_enabled %}
           enabled: true
+          keyrings:
+            {{ ceph.cinder.username }}:
+              key: {{ ceph.cinder.keyring }}
+              secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
+            {{ ceph.nova.username }}:
+              key: {{ ceph.nova.keyring }}
+              secret_uuid: 457eb676-33da-42ec-9a8c-9293d545c337
           cinder:
             user: {{ ceph.nova.username }}
-            keyring: {{ ceph.nova.keyring }}
           config:
             global:
               mon_host: {{ ceph.mon_host }}
@@ -705,7 +711,11 @@ spec:
           enabled: true
           cinder:
             user: {{ ceph.nova.username }}
-            keyring: {{ ceph.nova.keyring }}
+          keyrings:
+            {{ ceph.cinder.username }}:
+              key: {{ ceph.cinder.keyring }}
+            {{ ceph.nova.username }}:
+              key: {{ ceph.nova.keyring }}
           config:
             global:
               mon_host: {{ ceph.mon_host }}
