--- a/tests/fixtures/compute_helmbundle_all.yaml
+++ b/tests/fixtures/compute_helmbundle_all.yaml
@@ -133,6 +133,13 @@ spec:
       conf:
         ceph:
           enabled: true
+          keyrings:
+            cinder:
+              key: 'AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w=='
+              secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
+            nova:
+              key: 'AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ=='
+              secret_uuid: 457eb676-33da-42ec-9a8c-9293d545c337
         nova:
           cinder:
             catalog_info: volumev3:cinderv3:internalURL
@@ -252,6 +259,11 @@ spec:
       conf:
         ceph:
           enabled: false
+          keyrings:
+            cinder:
+              key: 'AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w=='
+            nova:
+              key: 'AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ=='
         libvirt:
           live_migration_interface: ens3
         nova:
