--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_adv.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_adv.yaml
@@ -9,8 +9,14 @@ spec:
       conf:
         ceph:
           cinder:
-            keyring: AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
             user: nova
+          keyrings:
+            cinder:
+              key: 'AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w=='
+              secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
+            nova:
+              key: 'AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ=='
+              secret_uuid: 457eb676-33da-42ec-9a8c-9293d545c337
           enabled: true
           config:
             global:
@@ -73,8 +79,12 @@ spec:
           02-custom.yaml: {}
         ceph:
           cinder:
-            keyring: AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
             user: nova
+          keyrings:
+            cinder:
+              key: 'AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w=='
+            nova:
+              key: 'AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ=='
           enabled: true
           config:
             global:
