--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_libvirt_tls.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_libvirt_tls.yaml
@@ -8,8 +8,14 @@ spec:
         user_secret_name: nova-rbd-keyring
       conf:
         ceph:
+          keyrings:
+            cinder:
+              key: AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w==
+              secret_uuid: c9543a17-411c-45e1-8a25-3f03e0090dc2
+            nova:
+              key: AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
+              secret_uuid: 457eb676-33da-42ec-9a8c-9293d545c337
           cinder:
-            keyring: AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
             user: nova
           enabled: true
           config:
@@ -71,8 +77,12 @@ spec:
           01-controller-default.yaml: {'compute_rule1': 'compute_value1'}
           02-custom.yaml: {}
         ceph:
+          keyrings:
+            cinder:
+              key: AQDLZLJfNPtTOxAAQm248Q9AyoirvELaSyPz5w==
+            nova:
+              key: AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
           cinder:
-            keyring: AQDNZLJf8S+fORAA6hg50Jo+vBq07kxtBXB9PQ==
             user: nova
           enabled: true
           config:
