--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_novnc.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_novnc.yaml
@@ -18,12 +18,13 @@ spec:
                 - "10.10.10.1:6789"
                 - "10.10.10.2:6789"
                 - "10.10.10.3:6789"
-        libvirt:
-          listen_addr: 0.0.0.0
         qemu:
           security_driver: apparmor
           vnc_tls: "1"
           vnc_tls_x509_verify: "1"
+        dynamic_options:
+          libvirt:
+            listen_interface: ens3
       pod:
         probes:
           libvirt:
