--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf_adv.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_tf_adv.yaml
@@ -18,10 +18,11 @@ spec:
                 - "10.10.10.1:6789"
                 - "10.10.10.2:6789"
                 - "10.10.10.3:6789"
-        libvirt:
-          listen_addr: 0.0.0.0
         qemu:
           security_driver: apparmor
+        dynamic_options:
+          libvirt:
+            listen_interface: vhost0
         apparmor:
           templates:
             TEMPLATE.qemu: |
