Allow to handle node updates in parallel
* Add logic to handle parallel node updates according to following rules
  - Only 1 controller is allowed to update concurrently
  - OSCTL_MAINTENANCE_PARALLEL_MAX_GATEWAY (default is 1) allowed to update concurrently
  - OSCTL_MAINTENANCE_PARALLEL_MAX_COMPUTE (default is 30) allowed to update concurrently

Related-Prod: PRODX-31836
Change-Id: I7583a18c1073cb3012bdaaef33b01d16b91eca63

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -49,7 +49,8 @@ osdpl:
         KOPF_RUN_DEBUG: 1
     node_maintenance_request:
       OSCTL_LOGGING_CONF: {}
-      raw: {}
+      raw:
+        OSCTL_MAINTENANCE_PARALLEL_MAX_COMPUTE: 30
     tf_secrets: {}
     ceph_secrets: {}
   pod:
