--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ packages =
     openstack_controller
 data_files =
     openstack_controller/admission/schemas.json = openstack_controller/admission/schemas.json
+    etc/openstack-controller =
+        etc/openstack-controller/01-controller-default.ini
 
 [entry_points]
 console_scripts =
