Make respect to nova AZ optional
It is not necessary that AZs in nova are failure domains, in this case
we should not limit concurrent compute updates within same AZ.
This patch introduce a new config option:
maintenance:respect_nova_az for this.

Related-Prod: PRODX-31870

Change-Id: I50810b4cc3c225f94490ae5ca9ea7e44239bd6ad

--- a/etc/openstack-controller/01-controller-default.ini
+++ b/etc/openstack-controller/01-controller-default.ini
@@ -36,3 +36,6 @@ nwl_parallel_max_compute = 30
 
 # max number of gateway nodes we allow to update in parallel
 nwl_parallel_max_gateway = 1
+
+# respect nova AZs, when set to true parammem update is allowed only for computes in same AZ
+respect_nova_az = True
