--- a/charts/openstack-operator/templates/job-ensure-resources.yaml
+++ b/charts/openstack-operator/templates/job-ensure-resources.yaml
@@ -9,17 +9,71 @@ metadata:
     "helm.sh/hook-delete-policy": "before-hook-creation"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: ClusterRole
 metadata:
   name: {{ include "openstack-controller.fullname" . }}-resources
   annotations:
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "1"
     "helm.sh/hook-delete-policy": "before-hook-creation"
+rules:
+  - apiGroups: [apiextensions.k8s.io]
+    resources: [customresourcedefinitions]
+    verbs: [get, create, patch]
+  - apiGroups: [zalando.org]
+    resources: [clusterkopfpeerings]
+    verbs: [get, create, patch]
+  - apiGroups: [zalando.org]
+    resources: [kopfpeerings]
+    verbs: [get, create, patch]
+  - apiGroups: [""]
+    resources: [namespaces]
+    verbs: [get, create, patch]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: {{ .Release.Namespace }}
+  name: {{ include "openstack-controller.fullname" . }}-resources
+  annotations:
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "1"
+    "helm.sh/hook-delete-policy": "before-hook-creation"
+rules:
+  - apiGroups: [""]
+    resources: [configmaps]
+    verbs: [get, create]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "openstack-controller.fullname" . }}-resources
+  annotations:
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "2"
+    "helm.sh/hook-delete-policy": "before-hook-creation"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: cluster-admin
+  name: {{ include "openstack-controller.fullname" . }}-resources
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "openstack-controller.fullname" . }}-resources
+    namespace: {{ .Release.Namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  namespace: {{ .Release.Namespace }}
+  name: {{ include "openstack-controller.fullname" . }}-resources
+  annotations:
+    "helm.sh/hook": "pre-install,pre-upgrade"
+    "helm.sh/hook-weight": "2"
+    "helm.sh/hook-delete-policy": "before-hook-creation"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: {{ include "openstack-controller.fullname" . }}-resources
 subjects:
   - kind: ServiceAccount
     name: {{ include "openstack-controller.fullname" . }}-resources
