Add more runtime settings
* Drop unused settings

Related-Prod: PRODX-3456
Change-Id: Ic4a3ee4c8faeea7a4bff5ba742a54af569dfda84

--- a/etc/openstack-controller/01-controller-default.ini
+++ b/etc/openstack-controller/01-controller-default.ini
@@ -5,6 +5,9 @@ wait_application_ready_timeout = 1200
 # The number of seconds to sleep between checking application ready attempts
 wait_application_ready_delay = 10
 
+# The amount of time to wit for flapping node
+node_not_ready_flapping_timeout = 120
+
 [helmbundle]
 # The number of seconds to wait for values set in manifest are propagated to child objects.
 manifest_enable_timeout = 600
