Reorganize ceph related values in helm chart
* Values.koph.enabled param has been removed
* kopfpeering resources created by operator
* ceph parameters has been moved to separate section

Related-Prod: PRODX-31112
Change-Id: Ie3ab379cbc32abb0323377f7d1c6afa106eefa51

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -20,12 +20,8 @@ image:
 nameOverride: ""
 fullnameOverride: "openstack-controller"
 
-kopf:
-  enabled: true
-
 osdpl:
   namespace: openstack
-  cephSharedNamespace: openstack-ceph-shared
   settings:
     raw:
       OSCTL_NODE_NOT_READY_FLAPPING_TIMEOUT: 120
@@ -117,6 +113,10 @@ tf:
 stacklight:
   createSharedNamespace: true
   sharedNamespace: openstack-lma-shared
+
+ceph:
+  createSharedNamespace: true
+  cephSharedNamespace: openstack-ceph-shared
 
 external_topics:
   createSharedNamespace: true
