--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -112,8 +112,8 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: {{ .Values.osdpl.cephSharedNamespace }}
-  name: "openstack-controller-role-{{ .Values.osdpl.cephSharedNamespace }}"
+  namespace: {{ .Values.ceph.cephSharedNamespace }}
+  name: "openstack-controller-role-{{ .Values.ceph.cephSharedNamespace }}"
 rules:
 
   # Application: read ceph access data from shared namespace.
@@ -189,12 +189,12 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  namespace: {{ .Values.osdpl.cephSharedNamespace }}
-  name: "openstack-controller-rolebinding-{{ .Values.osdpl.cephSharedNamespace }}"
+  namespace: {{ .Values.ceph.cephSharedNamespace }}
+  name: "openstack-controller-rolebinding-{{ .Values.ceph.cephSharedNamespace }}"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: "openstack-controller-role-{{ .Values.osdpl.cephSharedNamespace }}"
+  name: "openstack-controller-role-{{ .Values.ceph.cephSharedNamespace }}"
 subjects:
   - kind: ServiceAccount
     name: openstack-controller-account
@@ -494,7 +494,7 @@ spec:
             - kopf
             - run
             - '-n'
-            - {{ .Values.osdpl.cephSharedNamespace}}
+            - {{ .Values.ceph.cephSharedNamespace}}
             - '--standalone'
             - '-m'
             - openstack_controller.controllers.ceph.secrets
