Adjust caching time for PowerDNS backend
Related-Prod: PRODX-30888
Change-Id: I955cd5a6d8e405416ce250f141de456e73efea8b

--- a/openstack_controller/templates/services/dns.yaml
+++ b/openstack_controller/templates/services/dns.yaml
@@ -140,8 +140,12 @@ spec:
           apache2:
             enabled: true
       {%- endif %}
-      {%- if designate_log_level == 'DEBUG' %}
         powerdns:
+          # zone-cache-refresh-interval param must be less then poller total timeout
+          # it can be calcalated as poll_delay + poll_retry_interval * poll_max_retries
+          # by default it is 155 seconds. More information in the bug PRODX-30888
+          zone-cache-refresh-interval: 120
+      {%- if designate_log_level == 'DEBUG' %}
           loglevel: 5
           webserver-loglevel: 'detailed'
       {%- endif %}
