--- a/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_policies.yaml
+++ b/tests/fixtures/render_service_template/output/dns/ussuri_ceph_local_non_dvr_policies.yaml
@@ -8,6 +8,8 @@ spec:
           01-controller-default.yaml: {'dns_rule1': 'dns_value1'}
           02-custom.yaml:
             designate_custom: value
+        powerdns:
+          zone-cache-refresh-interval: 120
         designate:
           keystone_authtoken:
             memcache_secret_key: zdLlg6VAsGH6E7tX
