Allow to store mariadb backups on host filesystem
* Patch adds hostpath choice to features:database:backup:backend
* Can be used with conjunction of sync_remote functionality
* Eliminates necessarity of having k8s persistent volumes when
  creating backups

Related-Prod: PRODX-32187
Change-Id: I8de0713543a157c4c5ef39af68cd72f251e59816

--- a/openstack_controller/admission/validators/schemas/osdpl.yaml
+++ b/openstack_controller/admission/validators/schemas/osdpl.yaml
@@ -459,11 +459,12 @@ properties:
                 type: integer
               backend:
                 description: |
-                  Backend to perform backup to. Could be: pvc, pv_nfs. Default is pvc.
+                  Backend to perform backup to. Could be: pvc, pv_nfs, hostpath. Default is pvc.
                 type: string
                 enum:
                   - pvc
                   - pv_nfs
+                  - hostpath
               pv_nfs:
                 type: object
                 additionalProperties: false
