Change deprecated name live_migration_use_ip_to_scp_configdrive
This option [libvirt]migrations_use_ip_to_scp tells destination
compute to look up source compute IP address and use it for copying.

Related-Prod: PRODX-31339
Change-Id: Ia9c8c8ecb76c37f8186927ec310f0c9309aa8734

--- a/openstack_controller/templates/preset/compute-tf.yaml
+++ b/openstack_controller/templates/preset/compute-tf.yaml
@@ -161,7 +161,11 @@ services:
               # - NumInstancesFilter
               - PciPassthroughFilter
             libvirt:
+            {%- if openstack_version in ['queens', 'rocky', 'stein', 'train', 'ussuri'] %}
               live_migration_use_ip_to_scp_configdrive: true
+            {%- else %}
+              migrations_use_ip_to_scp: true
+            {%- endif %}
           enable_iscsi: true
         network:
           api:
