Set build_failure_weight_multiplier for filter scheduler
Related-Prod: PRODX-30224
Change-Id: I22317f5b40113863de1d5c2fafa07547b4d3b9d7
(cherry picked from commit d5defeef12e589d64ff59a672a005450ea3722f1)

--- a/openstack_controller/templates/services/compute.yaml
+++ b/openstack_controller/templates/services/compute.yaml
@@ -724,6 +724,8 @@ spec:
             cipher: {{ ephemeral_encryption.get("cipher", "aes-xts-plain64") }}
             key_size: {{ ephemeral_encryption.get("key_size", 256) }}
 {%- endif %}
+          filter_scheduler:
+            build_failure_weight_multiplier: 2.0
 {%- if neutron_backend == 'tungstenfabric' %}
           compute:
             live_migration_wait_for_vif_plug: false
