--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_lvm_non_dvr_encryption.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_lvm_non_dvr_encryption.yaml
@@ -100,6 +100,8 @@ spec:
             enabled: true
             key_size: 123
             cipher: secret
+          filter_scheduler:
+            build_failure_weight_multiplier: 2.0
           libvirt:
             cpu_mode: host-model
             images_rbd_pool: vms-hdd
