Set build_failure_weight_multiplier for filter scheduler
Related-Prod: PRODX-30224
Change-Id: I22317f5b40113863de1d5c2fafa07547b4d3b9d7

--- a/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_novnc.yaml
+++ b/tests/fixtures/render_service_template/output/compute/ussuri_ceph_local_non_dvr_novnc.yaml
@@ -129,6 +129,8 @@ spec:
             service_type: compute
           os_vif_ovs:
             isolate_vif: true
+          filter_scheduler:
+            build_failure_weight_multiplier: 2.0
           libvirt:
             cpu_mode: host-model
             images_rbd_pool: vms-hdd
