Set rabbitmq num_acceptors.tcp 30 for medium size
Related-Prod: PRODX-26668
Change-Id: I248c2417188e7c09d939b7d03c4ed43e43de1c20

--- a/openstack_controller/templates/size/medium.yaml
+++ b/openstack_controller/templates/size/medium.yaml
@@ -278,9 +278,13 @@ services:
                   max_unavailable: 1
     rabbitmq:
       values:
+        conf:
+          rabbitmq:
+            num_acceptors.tcp: 30
         pod:
           env:
-            server: RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "+S 8:8"
+            server:
+              RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "+S 8:8"
   block-storage:
     cinder:
       values:
