--- a/charts/openstack-operator/templates/openstack-controller.yaml
+++ b/charts/openstack-operator/templates/openstack-controller.yaml
@@ -7,156 +7,9 @@ kind: ServiceAccount
 metadata:
   namespace: {{ .Release.Namespace }}
   name: openstack-controller-account
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: openstack-controller-role-cluster
-rules:
-
-  # NOTE(pas-ha) needed for multi-instance, including dev override
-  # Framework: knowing which other operators are running (i.e. peering).
-  - apiGroups: [apiextensions.k8s.io]
-    resources: [customresourcedefinitions]
-    verbs: [list, get]
-  - apiGroups: [zalando.org]
-    resources: [clusterkopfpeerings]
-    verbs: [list, get, watch, patch]
-
-  # Watch creation and deletion of nodes with compute labels
-  - apiGroups: ['']
-    resources: [nodes]
-    verbs: [list, get, watch, patch]
-
-  # Application: read-only access for watching cluster-wide.
-  - apiGroups: [lcm.mirantis.com]
-    resources: [openstackdeployments]
-    verbs: [list, get, watch]
-  - apiGroups: [lcm.mirantis.com]
-    resources: [openstackdeploymentstatus]
-    verbs: [list, get, watch]
-  - apiGroups: [lcm.mirantis.com]
-    resources: [openstackdeploymentsecrets]
-    verbs: [list, get, watch]
-  - apiGroups: [lcm.mirantis.com]
-    resources: [helmbundles]
-    verbs: [list, get, watch]
-
-  # Application: node maintenance related access
-  - apiGroups: [lcm.mirantis.com]
-    resources: [nodemaintenancerequests]
-    verbs: [list, get, watch]
-  - apiGroups: [lcm.mirantis.com]
-    resources: [nodeworkloadlocks]
-    verbs: [list, get, watch, create, update, patch, delete]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: "{{ .Values.osdpl.namespace }}"
-  name: "openstack-controller-role-{{ .Values.osdpl.namespace }}"
-rules:
-
-  # Framework: posting the events about the handlers progress/errors.
-  - apiGroups: [""]
-    resources: [events]
-    verbs: [create]
-  # Application: read secret with keystone creds
-  - apiGroups: [""]
-    resources: [secrets]
-    verbs: [list, get, watch, patch]
-  # NOTE(pas-ha) needed for multi-instance, including dev override
-  # Framework: knowing which other operators are running (i.e. peering).
-  - apiGroups: [zalando.org]
-    resources: [kopfpeerings]
-    verbs: [list, get, watch, patch]
-
-  # Application: manage ceph access data(secrets,configmaps)
-  - apiGroups: [""]
-    resources: [secrets,configmaps]
-    verbs: [list, get, create]
-
-  - apiGroups: ["batch"]
-    resources: [cronjobs]
-    verbs: [list, get, watch]
-
-  - apiGroups: [""]
-    resources: ["pods", "pods/exec"]
-    verbs: [list, get]
-
-  # Application: watching & handling for the custom resource we declare.
-  - apiGroups: [lcm.mirantis.com]
-    resources: [openstackdeployments]
-    verbs: [list, get, watch, patch]
-
-  # Application: watching & handling for the custom resource we declare.
-  - apiGroups: [lcm.mirantis.com]
-    resources: [openstackdeploymentstatus]
-    verbs: [list, get, watch, patch]
-
-  # Application: watching & handling for the custom resource we declare.
-  - apiGroups: [lcm.mirantis.com]
-    resources: [openstackdeploymentsecrets]
-    verbs: [list, get, watch, patch]
-
-  # Application: resources we produce and manipulate.
-  - apiGroups: [lcm.mirantis.com]
-    resources: [helmbundles]
-    verbs: [list, get, watch, create, update, patch, delete]
-
-  # Manage child resources
-  - apiGroups: [extensions, apps, batch]
-    resources: [deployments, statefulsets, daemonsets, jobs]
-    verbs: [list, get, create, watch, patch, delete]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: {{ .Values.ceph.cephSharedNamespace }}
-  name: "openstack-controller-role-{{ .Values.ceph.cephSharedNamespace }}"
-rules:
-
-  # Application: read ceph access data from shared namespace.
-  - apiGroups: [""]
-    resources: [secrets,configmaps]
-    verbs: [list, get, create, watch, patch, update]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: {{ .Values.tf.sharedNamespace }}
-  name: "openstack-controller-role-{{ .Values.tf.sharedNamespace }}"
-rules:
-
-  # Application: read Tungsten Fabric access data from shared namespace.
-  - apiGroups: [""]
-    resources: [secrets,configmaps]
-    verbs: [list, get, create, patch, update]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  namespace: {{ .Values.osdpl.settings.raw.OSCTL_REDIS_NAMESPACE }}
-  name: "openstack-controller-role-{{ .Values.osdpl.settings.raw.OSCTL_REDIS_NAMESPACE }}"
-rules:
-
-  # Application: manage redis failovers from shared namespace.
-  - apiGroups: [databases.spotahome.com]
-    resources: [redisfailovers]
-    verbs: [list, get, create, patch, update]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: openstack-controller-rolebinding-cluster
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: openstack-controller-role-cluster
-subjects:
-  - kind: ServiceAccount
-    name: openstack-controller-account
-    namespace: {{ .Release.Namespace }}
+# The openstack-controller-account requires cluster wide role to use privileged
+# attributes (host bind mounts, host network, kernel capabilities) mostly on
+# daemonsets.apps by way of helm operations.
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -171,62 +24,6 @@ subjects:
 - kind: ServiceAccount
   name: openstack-controller-account
   namespace: {{ .Release.Namespace }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  namespace: "{{ .Values.osdpl.namespace }}"
-  name: "openstack-controller-rolebinding-{{ .Values.osdpl.namespace }}"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: "openstack-controller-role-{{ .Values.osdpl.namespace }}"
-subjects:
-  - kind: ServiceAccount
-    name: openstack-controller-account
-    namespace: {{ .Release.Namespace }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  namespace: {{ .Values.ceph.cephSharedNamespace }}
-  name: "openstack-controller-rolebinding-{{ .Values.ceph.cephSharedNamespace }}"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: "openstack-controller-role-{{ .Values.ceph.cephSharedNamespace }}"
-subjects:
-  - kind: ServiceAccount
-    name: openstack-controller-account
-    namespace: {{ .Release.Namespace }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  namespace: {{ .Values.osdpl.settings.raw.OSCTL_REDIS_NAMESPACE }}
-  name: "openstack-controller-rolebinding-{{ .Values.osdpl.settings.raw.OSCTL_REDIS_NAMESPACE }}"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: "openstack-controller-role-{{ .Values.osdpl.settings.raw.OSCTL_REDIS_NAMESPACE }}"
-subjects:
-  - kind: ServiceAccount
-    name: openstack-controller-account
-    namespace: {{ .Release.Namespace }}
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  namespace: {{ .Values.tf.sharedNamespace }}
-  name: "openstack-controller-rolebinding-{{ .Values.tf.sharedNamespace }}"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: "openstack-controller-role-{{ .Values.tf.sharedNamespace }}"
-subjects:
-  - kind: ServiceAccount
-    name: openstack-controller-account
-    namespace: {{ .Release.Namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
