Add libvirt CA to data exporter
Do not fail if the secret is not found, it can be optional

Related-Prod: PRODX-32395
Change-Id: I6ac5cbaf7bba26796f0d52ff1eb3935dd8e053a0

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -194,8 +194,12 @@ exporter:
           namespace: openstack
           key_name: cert
         keystone_public:
-          name: keystone-tls-public 
+          name: keystone-tls-public
           namespace: openstack
           key_name: tls.crt
+        libvirt_server_ca:
+          name: libvirt-server-tls-certs
+          namespace: openstack
+          key_name: cert
     raw:
       OSCTL_EXPORTER_BIND_PORT: 9102
