Upgrade neutron-l3 for DVR concurrently on computes only
Update max_unavailable to 10% for l3 component running on computes
in DVR case.

Related-Prod: PRODX-3456
Change-Id: I41cf56d17cb0c2f3ac30c8ed9b2712b252a174a1

--- a/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_dvr_onermq.yaml
+++ b/tests/fixtures/render_service_template/output/networking/ussuri_ceph_local_dvr_onermq.yaml
@@ -340,6 +340,12 @@ spec:
           labels:
             openstack-compute-node::enabled:
               values:
+                pod:
+                  lifecycle:
+                    upgrades:
+                      daemonsets:
+                        l3_agent:
+                          max_unavailable: 10%
                 labels:
                   agent:
                     l3:
