Add rabbitmq certificates to data exporter
Change-Id: Id6c5dd1b89e4251a60077d30732185f7c0864738
Closes-Bug: PRODX-31161

--- a/charts/openstack-operator/values.yaml
+++ b/charts/openstack-operator/values.yaml
@@ -201,5 +201,13 @@ exporter:
           name: libvirt-server-tls-certs
           namespace: openstack
           key_name: cert
+        rabbitmq_server:
+          name: rabbitmq-external-certs
+          namespace: openstack
+          key_name: server_cert
+        rabbitmq_client:
+          name: rabbitmq-external-certs
+          namespace: openstack
+          key_name: client_cert
     raw:
       OSCTL_EXPORTER_BIND_PORT: 9102
