Tune rabbitmq for medium size
* Limit number of channels for connection to 16, openstack uses 1 channel per connection.
* Increase numnber of tcp acceptors for neutron/nova
* disable reverse dns lookups for clients
* Increase memory watermark for neutron to 80%

Related-Prod: PRODX-32437
Change-Id: Ib7b789819ee98588f2feb6071a34f3a2ccd77f6e

--- a/openstack_controller/templates/size/medium.yaml
+++ b/openstack_controller/templates/size/medium.yaml
@@ -8,6 +8,19 @@ features:
       - compute
       - networking
 services:
+  messaging:
+    rabbitmq:
+      values:
+        conf:
+          rabbitmq:
+            num_acceptors.tcp: 20
+            channel_max: 16
+            reverse_dns_lookups: false
+            vm_memory_high_watermark.relative: 0.5
+        pod:
+          env:
+            server:
+              RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "+S 6:6 +IOt 3 +Q 131070 +P 2000000"
   redis:
     redisfailover:
       redis:
@@ -126,6 +139,18 @@ services:
             oslo_messaging_rabbit:
               rabbit_qos_prefetch_count: 64
   compute:
+    rabbitmq:
+      values:
+        conf:
+          rabbitmq:
+            num_acceptors.tcp: 30
+            channel_max: 16
+            reverse_dns_lookups: false
+            vm_memory_high_watermark.relative: 0.5
+        pod:
+          env:
+            server:
+              RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "+S 6:6 +IOt 3 +Q 131070 +P 2000000"
     nova:
       values:
         pod:
@@ -276,11 +301,14 @@ services:
       values:
         conf:
           rabbitmq:
-            num_acceptors.tcp: 30
+            num_acceptors.tcp: 50
+            channel_max: 16
+            reverse_dns_lookups: false
+            vm_memory_high_watermark.relative: 0.8
         pod:
           env:
             server:
-              RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "+S 8:8"
+              RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "+S 12:12 +IOt 5 +Q 131070 +P 2000000"
   block-storage:
     cinder:
       values:
