Disabled job for cleanup secrets
According to the Openstack cluster remove instructions all
secrets are deleted by using the bash snippet.

Related-Prod: PRODX-32423
Change-Id: Id58607e2eeacd379ed6a64b9ba7d5b3b64ecf32e

--- a/openstack_controller/templates/services/block-storage.yaml
+++ b/openstack_controller/templates/services/block-storage.yaml
@@ -340,7 +340,7 @@ spec:
         statefulset_backup: {{ is_backup_enabled }}
         statefulset_volume: {{ spec.features.get("cinder", {}).get("volume", {}).get("enabled", True) }}
         ceph_conf: {{ is_ceph_enabled }}
-        job_clean: {{ is_ceph_enabled }}
+        job_clean: false
       network:
         api:
           ingress:
