--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_db_cleanup.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_db_cleanup.yaml
@@ -293,6 +293,7 @@ spec:
         secret_ca_bundle: true
         cron_job_db_purge: true
         ceph_conf: true
+        job_clean: false
       pod:
         replicas:
           api: 1
