--- a/tests/fixtures/render_service_template/output/image/ussuri_lvm_lvm_non_dvr.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_lvm_lvm_non_dvr.yaml
@@ -295,6 +295,7 @@ spec:
         network_policy: false
         secret_ca_bundle: true
         ceph_conf: true
+        job_clean: false
       pod:
         replicas:
           api: 1
