--- a/tests/fixtures/render_service_template/output/metric/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/metric/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -99,6 +99,7 @@ spec:
         daemonset_statsd: false
         service_statsd: false
         pod_gnocchi_test: false
+        job_clean: false
       endpoints:
         cluster_domain_suffix: cluster.local
         identity:
