--- a/openstack_controller/templates/services/image.yaml
+++ b/openstack_controller/templates/services/image.yaml
@@ -328,6 +328,7 @@ spec:
         job_storage_init: false
         secret_ca_bundle: true
         ceph_conf: true
+        job_clean: false
 {%- if signature.enabled %}
         job_barbican_cert_init: true
 {%- endif %}
