--- a/openstack_controller/templates/services/metric.yaml
+++ b/openstack_controller/templates/services/metric.yaml
@@ -133,6 +133,7 @@ spec:
         daemonset_statsd: false
         service_statsd: false
         pod_gnocchi_test: false
+        job_clean: false
       endpoints:
         cluster_domain_suffix: {{ spec.internal_domain_name }}
 {% include 'base/_admin_identity.yaml' %}
