--- a/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_db_cleanup.yaml
+++ b/tests/fixtures/render_service_template/output/block-storage/ussuri_ceph_local_non_dvr_db_cleanup.yaml
@@ -270,7 +270,7 @@ spec:
         cron_job_db_purge: true
         cron_volume_usage_audit: false
         ceph_conf: true
-        job_clean: true
+        job_clean: false
         statefulset_volume: true
         statefulset_backup: true
       pod:
