Skip test_metadata_routed in DVR case
test_metadata_routed tests metadata service availability via ipv6
from openstack instance. In our DVR setup we don't have metadata
service running on compute node, it is running on controller node.
And in current setup openstack instance cannot get access to metadata
on controller node.

Related-Prod: https://mirantis.jira.com/browse/PRODX-28571
Change-Id: I1aac0659166a99205a9f13a8c28e48c621dd5fa7

--- a/openstack_controller/templates/preset/compute.yaml
+++ b/openstack_controller/templates/preset/compute.yaml
@@ -306,6 +306,10 @@ services:
             - (?:tempest.api.compute.admin.test_live_migration.LiveAutoBlockMigrationV225Test.test_volume_backed_live_migration)
             - (?:tempest.api.compute.admin.test_live_migration.LiveMigrationTest.test_volume_backed_live_migration)
           {%- endif %}
+          {%- if neutron_dvr_enabled %}
+            # PRODX-28571 - ipv6 metadata doesn't work in DVR case
+            - (?:neutron_tempest_plugin.scenario.test_metadata.MetadataTest.test_metadata_routed)
+          {%- endif %}
           {%- if not openstack_yoga_plus %}
             - (?:tempest.api.image.v2.test_images.ImportImagesTest.test_image_glance_direct_import)
           {%- endif %}
