Allow to create only one OSDPL resource
The patch allows to create only one OSDPL resource to avoid
any possible errors during upgrade.

Related-PRODX: PRODX-31737
Change-Id: I38e3d3db6d530c832cd4dd3737c443c2aa1227c0

--- a/charts/openstack-operator/templates/admission-controller.yaml
+++ b/charts/openstack-operator/templates/admission-controller.yaml
@@ -11,8 +11,12 @@ kind: ClusterRole
 metadata:
   name: openstack-controller-admission-role-cluster
 rules:
+  # Application: read-only access for watching cluster-wide.
   - apiGroups: [lcm.mirantis.com]
     resources: [openstackdeploymentstatus]
+    verbs: [list, get, watch]
+  - apiGroups: [lcm.mirantis.com]
+    resources: [openstackdeployments]
     verbs: [list, get, watch]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
