--- a/etc/openstack-controller/01-controller-default.ini
+++ b/etc/openstack-controller/01-controller-default.ini
@@ -43,6 +43,10 @@ nwl_parallel_max_gateway = 1
 # respect nova AZs, when set to true parammem update is allowed only for computes in same AZ
 respect_nova_az = True
 
-# flag to skip instance check on host before proceeding with node removal. By default if False
+# flag to skip instance check on host before proceeding with node removal. By default is False
 # which means that node removal will be blocked unless at least 1 instance exists on host.
 ndr_skip_instance_check = False
+
+# flag to skip volume check on host before proceeding with node removal. By default is False
+# which means that node removal will be blocked unless at least 1 volume exists on host.
+ndr_skip_volume_check = False
