Add dep_check image to cloudprober
Related-prod: https://mirantis.jira.com/browse/PRODX-32861
Change-Id: I243722aa6f1c08437005e30c41155e8fca27ac43

--- a/openstack_controller/templates/services/cloudprober.yaml
+++ b/openstack_controller/templates/services/cloudprober.yaml
@@ -14,7 +14,7 @@ spec:
 {%- for image in [
     "cloudprober",
     "cloudprober_openstack_discovery",
-    ] %}
+    "dep_check"] %}
         {%- if image in images %}
           {{ image }}: {{ images[image] }}
         {%- endif %}
