--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,9 @@ ignore_basepython_conflict = True
 [testenv]
 basepython = python3.8
 usedevelop = True
-install_command = {toxinidir}/tox_install.sh {opts} {packages}
+install_command = bash {toxinidir}/tox_install.sh {opts} {packages}
+allowlist_externals =
+    bash
 deps =
     .[test]
 setenv =
